src/objects/X1st_PM__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loss__c</fullName>
        <label>Loss %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_Kit__c</fullName>
        <label>Price Kit</label>
        <referenceTo>Price_Kit__c</referenceTo>
        <relationshipLabel>1st PM</relationshipLabel>
        <relationshipName>X1st_PM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>X1st_PM_Type__c</fullName>
        <label>1st PM Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DOY</fullName>
                </value>
                <value>
                    <fullName>PILLOW</fullName>
                </value>
                <value>
                    <fullName>FOUR SIDE SEAL</fullName>
                </value>
                <value>
                    <fullName>DOY FLAT BOTTOM</fullName>
                </value>
                <value>
                    <fullName>PILLOW BLOCK BOTTOM</fullName>
                </value>
                <value>
                    <fullName>VACUUM</fullName>
                </value>
                <value>
                    <fullName>PET JAR</fullName>
                </value>
                <value>
                    <fullName>GLASS JAR</fullName>
                </value>
                <value>
                    <fullName>PET CYLINDER JAR</fullName>
                </value>
                <value>
                    <fullName>METAL CANISTER</fullName>
                </value>
                <value>
                    <fullName>COMPOSITE CANISTER</fullName>
                </value>
                <value>
                    <fullName>PET CANISTER</fullName>
                </value>
                <value>
                    <fullName>PAPER MILK BOTTLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>1st PM</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>1st PM Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>1st PM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>